# python-ismrmrd-server

./: pyproject.toml
src/fire_programs/: analyzeflow.py  invertcontrast.py  simplefft.py
src/ismrmrd_server/: client.py  connection.py  server.py
src/ismrmrd_server/fire_programs/: analyzeflow.py  invertcontrast.py  simplefft.py
