[project]
name = "python-ismrmrd-server"
version = "0.1.0"
description = "Example client/server example for the streaming ISMRM Raw Data protocol"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "ismrmrd==1.14.1",   # Python bindings; PyPI package name is "ismrmrd" not "ismrmrd-python"
    "h5py>=3.7.0",       # For ismrmrd
    "matplotlib>=3.8.2", # used by rgb.py and provides various visualization tools including colormaps
    "pydicom==3.0.1",    # used by dicom2mrd.py to parse DICOM data
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[tool.setuptools.packages.find]
where = ["src"]
 
[tool.setuptools.package-dir]
"" = "src"
